TestSuite/errors/err0422.pas
//!GetType не объявлен в типе function(i: integer): string
function f(i: integer): string;
begin
  
end;

begin
  writeln(f.GetType);
end.